server/public/styles.css
html {
  background-color: rgb(48, 170, 234);
}

body {
  background-color: white;
  min-height: 60em;
  height: 600px;
  border-radius: 50%;
}

h1,
h3 {
  color: rgb(48, 170, 234);
}

.sidebar {
  background-color: rgb(48, 170, 234);
  z-index: 1;
  position: absolute;
  width: 100px;
  left: -100px;
  top: 0;
  transform: scale(1);
  transition: all 0.5s ease;
}

.sidebar-nav-on {
  background-color: rgb(48, 170, 234);
  z-index: 1;
  position: absolute;
  padding-top: 100px;
  width: 175px;
  height: 125vh;
  top: 70px;
  left: 20px;
  transition: all 0.5s ease;
  transform: scale(1.25);
}

.navbar-color {
  background-color: rgb(48, 170, 234);
}

.navbar-height {
  height: 0;
}

.white {
  color: white;
  background-color: rgb(48, 170, 234);
  border: none;
}

.white:hover {
  text-decoration: none;
}

.ul-list-container {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

ul {
  list-style-type: none;
  color: rgb(48, 170, 234);
  font-size: 25px;
}

.logo {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 15%;
}

.bodyImage {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 10%;
}

.goal {
  display: block;
  margin-left: auto;
  margin-right: auto;
  background-color: rgb(48, 170, 234);
  width: 60%;
  margin-top: 1%;
  margin-bottom: 2%;
  border-radius: 25px;
  padding: 15px;
}

p {
  text-align: center;
  color: white;
  font-size: 20px;
}

.p4 {
  font-size: 14px;
  color: rgb(48, 170, 234);
}

.disclaimer {
  display: block;
  margin-left: auto;
  margin-right: auto;
  background-color: rgb(48, 170, 234);
  width: 60%;
  margin-top: 2%;
  border-radius: 25px;
  padding: 5px;
}

.p3 {
  font-size: 12px;
}

.buttons {
  text-align: center;
  padding-top: 7%;
}

.profile-button,
.login {
  background-color: rgb(48, 170, 234);
  color: white;
  border-radius: 50px;
  border-color: white;
  font-size: 20px;
  padding: 15px;
}

.profile-button {
  margin-right: 1%;
}

.login {
  margin-left: 1%;
}

.profile-button:hover {
  text-decoration: none;
}

.login:hover {
  text-decoration: none;
}

.profiletitle {
  color: rgb(48, 170, 234);
}

.bodyImageProfile {
  margin-left: 50%;
  width: 30%;
}

.input {
  padding: 2px;
  color: rgb(48, 170, 234);
}

input {
  width: 50%;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

.createbutton {
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-top: 3%;
  background-color: rgb(48, 170, 234);
  color: white;
  border-color: white;
  width: 100px;
  height: 100px;
  border-radius: 50%;
  font-size: 20px;
  text-align: center;
}

button:focus {
  outline: none;
}

.logintitle {
  color: rgb(48, 170, 234);
}

.bodyImageLogin {
  margin-left: 50%;
  width: 30%;
}

.bodyparts-menu {
  display: block;
  text-align: center;
  padding-top: 2%;
  padding-bottom: 5%;
}

.bodyPartsBodyImage {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 10%;
}

.bodypart-submit {
  display: block;
  margin-left: auto;
  margin-right: auto;
  background-color: rgb(48, 170, 234);
  color: white;
  width: 100px;
  height: 100px;
  border-radius: 50%;
  border-color: white;
  font-size: 20px;
  text-align: center;
  padding-top: 5px;
}

.symptoms-menu,
.diagnosis-menu {
  display: block;
  text-align: center;
  padding-top: 2%;
  padding-bottom: 5%;
}

.bodyparts-list,
.symptoms-list,
.diagnosis-list {
  width: 300px;
}

.bodyPartsImage {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 10%;
}

.symptom-submit,
.diagnosis-submit {
  display: block;
  margin-left: auto;
  margin-right: auto;
  background-color: rgb(48, 170, 234);
  color: white;
  width: 100px;
  height: 100px;
  border-radius: 50%;
  border-color: white;
  font-size: 20px;
  text-align: center;
  padding-top: 5px;
}

.login-input {
  margin-left: 30%;
  padding-top: 5px;
  color: rgb(48, 170, 234);
}

.login-submit {
  display: block;
  margin-left: auto;
  margin-right: auto;
  background-color: rgb(48, 170, 234);
  color: white;
  width: 100px;
  height: 100px;
  border-radius: 50%;
  border-color: white;
  font-size: 20px;
  text-align: center;
  padding-top: 5px;
}

.login-submit:hover {
  text-decoration: none;
}

.logoutmessage {
  text-align: center;
  padding-bottom: 5%;
}

.homeButton {
  display: block;
  margin-left: auto;
  margin-right: auto;
  background-color: rgb(48, 170, 234);
  border: none;
  color: white;
  width: 100px;
  height: 100px;
  font-size: 20px;
  padding: 15px;
  margin-top: 2%;
  cursor: pointer;
  border-radius: 50%;
  text-align: center;
}

.homeButton:hover {
  text-decoration: none;
}

@media screen and (min-width: 1400px) {
  .sidebar {
    background-color: rgb(48, 170, 234);
    z-index: 1;
    position: absolute;
    width: 175px;
    height: 90vh;
    top: 0;
    left: -175px;
    transform: scale(1);
    transition: all 0.5s ease;
  }

  .sidebar-nav-on {
    background-color: rgb(48, 170, 234);
    z-index: 1;
    position: absolute;
    width: 175px;
    height: 100vh;
    top: 110px;
    left: 20px;
    transition: all 0.5s ease;
    transform: scale(1.25);
  }
}

